css/main.css
/* ... */
.fixed_header {
  width: 100%;
  table-layout: fixed;
  border-collapse: collapse;
}

.fixed_header tbody {
  display: block;
  overflow: auto;
  height: 200.4px;
  width: 100%;
}

.fixed_header th,
.fixed_header td {
  text-align: center;
  width: 300px;
}

.fixed_header thead tr {
  display: block;
  /*width: 100%;*/
}

.history-th-1 {
  width: 30.1% !important;
}

.history-th-2 {
  width: 33% !important;
}

.history-th-3 {
  width: 35% !important;
}

.history-td-1 {
  width: 30%;
}

.history-td-2 {
  width: 33%;
}
.select:not(.is-multiple):not(.is-loading)::after {
  border-color: #0097e1;
  right: 1.125em;
  z-index: 3;
}

/*StatusUpdateModal*/
.status {
  justify-content: center;
}

.save {
  margin-right: 1%;
}

.field-headers {
  opacity: 1;
  transform: translateY(0);
  font-size: 11px;
}

.field-headers-1 {
  opacity: 1;
  transform: translateY(0);
  font-size: 11px;
}

.field-headers-2 {
  opacity: 1;
  transform: translateY(0);
  font-size: 11px;
  display: block;
}

.form-row,
.second-row {
  display: flex;
  flex-direction: row;
}
.client-status-wrap {
  display: flex;
  flex-direction: column;
  width: 68%;
}

.client-status-history-wrap {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.hist-left-margin {
  margin-left: 2%;
}

.inputs-wrap {
  width: 20%;
  display: flex;
  flex-direction: column;
  margin-right: 1%;
}

.eventtag-select {
  width: 41%;
}

.bm-item-list > .popup-menu-item > a {
  margin-left: 10px;
  color: #fff;
  font-size: 1rem;
  font-weight: 400 !important;
  line-height: 1.5;
}

.radio-wrap {
  display: flex;
  flex-direction: column;
}

.b-radio.radio {
  color: #0097e1;
}

.cleartext-wrap {
  position: relative;
  width: 580px;
}

.cleartext-close {
  display: block;
  position: absolute;
  top: 5px;
  left: 252px;
  z-index: 100;
  cursor: pointer;
}

.search-icon {
  height: 35px;
  margin-right: 1%;
}

.login-style {
  color: white;
}

/*-----------Media Queries Starts Here----------------*/

